--- a/trunk/Informe/CasinoOnline.tex
+++ b/trunk/Informe/CasinoOnline.tex
@@ -132,8 +132,7 @@ El casino puede entrar en un ``modo dirigido'' si así lo requiriera o deseara el
 	\subsection{Documentos relacionados}
 	
 	Los documentos relacionados con este proyecto son los que aquí se detallan:
-	
-	
+
 \begin{itemize}
 \item 	Primera Reunión de Relevamiento
 \item 	Minuta de reunión 17/04/2008 Versión 1.0
@@ -207,18 +206,21 @@ Algunos de los supuestos que hemos adoptado es que por ahora se incluirán solo l
 \newpage
 \section{Glosario}
 
+\paragraph{Glosario de Terminologia de requeriminetos}
+\textbf{Craps: } Es cuando en los dados se obtiene por resultado un dos, un tres o un doce.\\
+\textbf{Natural: } Es cuando en los dados se obtiene por resultado un siete o un once\\
+\textbf{Puck: } Una luz en el tablero que indica si se ha establecido el Punto
+Punto, establecer: Es cuando en los dados se obtiene por resultado un cuatro, cinco, seis, ocho, nueve o diez.
+
+\paragraph{Glosario de Terminologia de juegos del casino}
 \textbf{Actor: } Representa un tipo de usuario, un rol, abstrayendo al usuario real. Un actor es un agente.\\
 \textbf{Agente: } Es cualquier ente, sistema, persona que interacciona con nuestra maquina, o sistema de software.\\
 \textbf{Casos de Uso: } Describen bajo la forma de acciones y reacciones las operaciones provistas por una maquina desde el punto de vista del usuario, o sea, una secuencia de acciones que el sistema puede llevar a cabo interactuando con los actores. Estructuran el conjunto de operaciones según la categoría de usuarios que participan en el mismo.\\
-\textbf{Craps: } Es cuando en los dados se obtiene por resultado un dos, un tres o un doce.\\
 \textbf{Diagrama de Actividad: } Presenta un flujo de actividades que están conectadas por medio de flechas representando flujo de control.\\
 \textbf{FSM (Finite State Machines): } Las Maquinas de estado finito especifican aspectos relacionados con el tiempo real, dominios reactivos o autónomos, etc. Pueden representar aspectos dinámicos que no se expresan en otros diagramas.\\
 \textbf{Herencia: } Un subconjunto del modelo heredado, con características propias además de todas las heredadas.\\
 \textbf{Modelo Conceptual: } El objetivo es identificar y explicar los conceptos significativos en un dominio de problema y como estos se relacionan entre si.\\
-\textbf{Natural: } Es cuando en los dados se obtiene por resultado un siete o un once\\
 \textbf{OCL (Object Constraint Languaje): } Lenguaje que depende del modelo de clases conceptuales (o modelo conceptual), se lo utiliza para expresar mas formalmente las operaciones y restricciones, para definir que estados son válidos.\\
-\textbf{Puck: } Una luz en el tablero que indica si se ha establecido el Punto
-Punto, establecer: Es cuando en los dados se obtiene por resultado un cuatro, cinco, seis, ocho, nueve o diez.\\
 \textbf{Validación: } Proceso cuyo objetivo es incrementar la confianza de que una descripción formal se corresponde con la realidad.\\
 \textbf{Verificación: } Proceso cuyo objetivo es garantizar que una descripción formal es correcta con respecto a otra (la del problema con la de la solución en este caso).
 
