--- a/Informe/porfuncionalidad.tex
+++ b/Informe/porfuncionalidad.tex
@@ -78,7 +78,7 @@ Dicha interaccion con el sistema esta explicada en el caso de uso: CU \actm \ref
 \depto Con esta maquina de estados finitos (FSM) Mostramos que en modo dirigido se pueden lanzar jugadas de forma manual, dicha funcionalidad no esta permitida en modo normal.
 Es seteo de las jugadas debe hacerse en el momento de entrar en modo dirigido. 
 
-\paragraph{FSM: Administrador}
+\paragraph{FSM: Manipulador}
 \begin{center}
 \includegraphics[scale=0.5]{img/manipulador.png}
 \end{center}
@@ -116,7 +116,7 @@ Cada una de estas actividades se explican con mas detalle en los casos de uso: C
 
 \depto Con esta maquina de estados finitos (FSM) mostramos el desarrollo del juego tragamonedas, modelando solo la parte de cobrar o no.
 
-{\large FSM: JugadorTragamonedas}
+{\large FSM: JugadaTragamonedas}
 \begin{center}
 \includegraphics[scale=0.5]{img/JugadorTragamonedas.png}
 \end{center}
