--- a/trunk/Informe/porfuncionalidad.tex
+++ b/trunk/Informe/porfuncionalidad.tex
@@ -152,21 +152,32 @@ CU \incr \ref{lincr}, CU \jcr \ref{ljcr}, CU \apcr \ref{lapcr} y CU \scr \ref{ls
 \begin{framed}
 
 \depto Con estas maquinas de estados finitos (FSM) mostramos el desarrollo del juego craps. Incluyendo entre ellas un seleccionador, un tirador y cada una de las apuestas. 
-
+\\
 {\large FSM: Seleccionador}
 \begin{center}
 \includegraphics[scale=0.4]{img/seleccionador.png}
 \end{center}
+
+Con esta FSM modelamos la eleccion del tirador. 
 
 {\large FSM: Tirador}
 \begin{center}
 \includegraphics[scale=0.5]{img/tirador.png}
 \end{center}
 
-{\large FSM: Desarrollo Craps}
+{\large FSM: Cupier}
+\begin{center}
+\includegraphics[scale=0.5]{img/coupier.png}
+\end{center}
+
+
+
+{\large FSM: Jugada Craps}
 \begin{center}
 \includegraphics[scale=0.25]{img/desarrolloCraps.png}
 \end{center}
+
+Con esta FSM explicamos una jugada de manera general, es decir sin las apuestas. Estas ultimas se explican en el anexo III.
 
 \end{framed}
 
