--- a/trunk/Informe/porfuncionalidad.tex
+++ b/trunk/Informe/porfuncionalidad.tex
@@ -118,7 +118,7 @@ Cada una de estas actividades se explican con mas detalle en los casos de uso: C
 \begin{framed}
 
 \depto Con esta maquina de estados finitos (FSM) mostramos el desarrollo del juego tragamonedas, modelando solo la parte de cobrar o no. 
-
+\\
 {\large FSM: JugadaTragamonedas}
 \begin{center}
 \includegraphics[scale=0.5]{img/JugadaTragamonedas.png}
@@ -177,7 +177,7 @@ Con esta FSM modelamos la eleccion del tirador.
 \includegraphics[scale=0.25]{img/desarrolloCraps.png}
 \end{center}
 
-Con esta FSM explicamos una jugada de manera general, es decir sin las apuestas. Estas ultimas se explican en el anexo III.
+Con esta FSM explicamos una jugada de manera general, es decir sin las apuestas. Estas ultimas se explican en el anexo III. Cabe aclarar que cada una de las apuestas se explican con FSMs distintas; una para cada una de ellas.
 
 \end{framed}
 
