* diagrama de clases OK  * diagrama de emum  * invariantes  * reporte movimientos

--- a/Informe/CasinoOnline.tex
+++ b/Informe/CasinoOnline.tex
@@ -243,12 +243,12 @@ A medida que ibamos avanzando en el desarrollo del trabajo, nos dimos cuenta que
 
 \newpage
 \label{an4}
-\section{Anexo IV - FSM - Pago jugada Tragamonedas}
+\section{Anexo IV - Operaciones OCL - Pago jugada Tragamonedas}
 \input{an4.tex}
 
 \newpage
 \label{an5}
-\section{Anexo V - FSM - Pago jugada Craps}
+\section{Anexo V - Operaciones OCL - Pago jugada Craps}
 \input{an5.tex}
 
 \end{document}
